--- a/GastritisTracker/Components/Layout/MainLayout.razor
+++ b/GastritisTracker/Components/Layout/MainLayout.razor
@@ -13,6 +13,18 @@
         <article class="content px-4">
             @Body
         </article>
+
+        <footer class="footer text-center m-0  text-muted">
+            <div class="container">
+                <span>
+                    &copy; 2026 London - 🩺 Gastritis Tracker System -
+                    <i class="bi bi-code-slash"></i> By Emilio Barrera Built with
+                    <i class="bi bi-heart-fill" style="color: #e74c3c;"></i>
+
+                </span>
+            </div>
+        </footer>
+
     </main>
 </div>
 
